<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/your_profile_image"
        android:layout_width="match_parent"
        android:layout_height="203dp"
        android:layout_gravity="top"
        android:scaleType="centerCrop"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/your_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/author_name"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/your_profile_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/nickname"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/your_profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/standart_email"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/your_profile_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/standart_company"
        android:textSize="13sp" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3"
        android:orientation="horizontal"
        android:paddingTop="15dp">
        <TextView
            android:text="@string/gists_count_text"
            android:textSize="15sp"
            android:textStyle="bold"
            android:paddingHorizontal="15dp"
            android:paddingVertical="3dp"
            />
        <TextView
            android:text="@string/private_repos_text"
            android:textSize="15sp"
            android:textStyle="bold"
            android:paddingHorizontal="15dp"
            android:paddingVertical="3dp"

            />
        <TextView
            android:text="@string/owned_repos_text"
            android:textSize="15sp"
            android:textStyle="bold"
            android:paddingHorizontal="15dp"
            android:paddingVertical="3dp"
            />
        <TextView
            android:text="@string/_45"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:paddingHorizontal="15dp"
            android:paddingVertical="3dp"
            android:id="@+id/gists_count_id"
            />
        <TextView
            android:text="@string/_2"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:paddingHorizontal="15dp"
            android:paddingVertical="3dp"
            android:id="@+id/private_count_id"
            />
        <TextView
            android:text="@string/_52"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:paddingHorizontal="15dp"
            android:paddingVertical="3dp"
            android:id="@+id/owned_count_id"
            />
    </GridLayout>

    <Button
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="25dp"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/go_to_repos_list_text"
        android:id="@+id/go_to_repos_button"/>

</LinearLayout>