<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/detailed_profile_image"
        android:layout_width="match_parent"
        android:layout_height="319dp"
        android:layout_gravity="top"
        android:scaleType="centerCrop"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/detailed_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/author_name"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/detailed_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/nickname"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/detailed_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/standart_email"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/detailed_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/standart_company"
        android:textSize="13sp" />



    <Button
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="25dp"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/go_to_repos_list_text"
        android:id="@+id/detailed_go_to_repos_button"/>

</LinearLayout>