<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:id="@+id/root_layout_edit_profile"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="70dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/username_edit_text"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/new_name_ET"
        android:shadowColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/company_edit_text"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/new_company_ET"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/location_edit_text"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/new_location_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginHorizontal="20dp"
        />

    <Button
        android:id="@+id/submit_button_id"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        android:background="@drawable/sign_in_button_selector"
        android:layout_marginHorizontal="55dp"/>
</LinearLayout>