<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/gray_light"

        android:paddingTop="35dp"
        android:layout_gravity="center_horizontal"
        android:textSize="40dp"
        android:textStyle="bold"/>
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="308dp"
        android:layout_height="207dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_light"
        android:layout_gravity="center"
        android:textStyle="normal"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"
        android:text="@string/username_text"
        android:textSize="20dp"
        />

    <EditText
        android:layout_width="353dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/gray_light"
        android:id="@+id/username"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/password_text"
        android:textColor="@color/gray_light"
        android:textSize="20dp"
        android:textStyle="normal" />

    <EditText
        android:layout_width="353dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:height="35dp"
        android:background="@color/gray_light"
        android:inputType="textPassword"
        android:id="@+id/password"/>

    <Button
        android:layout_width="361dp"
        android:layout_height="62dp"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:text="@string/button_sign_in"
        android:textSize="17dp"
        android:id="@+id/button_sign_in"/>

</LinearLayout>